modules/gdscript/tests/scripts/analyzer/errors/variable_as_type.gd
var Node = Custom

func test():
	var a: Node = Node2D.new()

class Custom extends RefCounted:
	pass
